--- a/website/src/routes/search/Search.css
+++ b/website/src/routes/search/Search.css
@@ -1,3 +1,7 @@
+:root {
+  --search-form-margin: 5px;
+}
+
 .top_container {
   padding: 30px 20px 20px 90px;
 }
@@ -7,13 +11,17 @@
 
 .searchbar {
   height: 2.5rem;
+  flex: 1 1 auto;
 }
 
 .button {
   background-color: var(--color-ocean-blue);
   color: var(--color-white-blue);
   min-height: 2.5rem;
+  margin: 0;
+  margin-left: 5px;
   border: unset;
+  flex: 0;
 }
 
 .horizontal_line {
@@ -26,6 +34,16 @@
   padding-left: 120px;
 }
 
+.form {
+  display: flex;
+  margin: calc(-1 * var(--search-form-margin));
+  margin-right: var(--search-form-margin);
+}
+
+.form > * {
+  margin: var(--search-form-margin);
+}
+
 @media (max-width: 500px) {
   .top_container {
     padding-left: 0;
@@ -36,4 +54,3 @@
     padding-left: 0;
   }
 }
-
